// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MissingProductModal Actions closeModal test 1`] = `
Array [
  Object {
    "type": "Admin/MissingProductModal/close",
  },
]
`;

exports[`MissingProductModal Actions openModal test 1`] = `
Array [
  Object {
    "type": "Admin/MissingProductModal/open",
  },
]
`;

exports[`MissingProductModal Actions searchBrand test 1`] = `
Array [
  Object {
    "type": "Admin/MissingProductModal/searchBrand",
  },
]
`;

exports[`MissingProductModal Actions searchProduct test 1`] = `
Array [
  Object {
    "type": "Admin/MissingProductModal/searchProduct",
  },
]
`;

exports[`MissingProductModal Actions submitMissingProductRequest test 1`] = `
Array [
  Object {
    "type": "Admin/MissingProductModal/submitMissingProductRequest",
  },
]
`;

exports[`MissingProductModal Actions submitMissingProductResponse test 1`] = `
Array [
  Object {
    "type": "Admin/MissingProductModal/submitMissingProductResponse",
  },
]
`;

exports[`MissingProductModal Actions updateMissingProduct test 1`] = `
Array [
  Object {
    "type": "Admin/MissingProductModal/update",
  },
]
`;

exports[`MissingProductModal Reducers closeModal 1`] = `
Object {
  "modalIsOpen": false,
}
`;

exports[`MissingProductModal Reducers initial state 1`] = `
Object {
  "appearanceSecond": 0,
  "brand": Object {},
  "modalIsOpen": false,
  "product": Object {},
  "productVariantName": "",
}
`;

exports[`MissingProductModal Reducers openModal 1`] = `
Object {
  "appearanceSecond": undefined,
  "modalIsOpen": true,
}
`;

exports[`MissingProductModal Reducers submitMissingProductResponse 1`] = `
Object {
  "appearanceSecond": 0,
  "brand": Object {},
  "modalIsOpen": false,
  "product": Object {},
  "productVariantName": "",
}
`;

exports[`MissingProductModal Reducers updateMissingProduct 1`] = `
Object {
  "appearanceSecond": 0,
  "brand": Object {},
  "foo": "bar",
  "modalIsOpen": false,
  "product": Object {},
  "productVariantName": "",
}
`;

exports[`MissingProductModal Sagas workSubmitMissingProductRequest 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "payload": Object {
        "appearanceSecond": 123,
        "brandName": undefined,
        "missingProductId": 1,
        "productName": undefined,
        "productVariantName": "foo",
      },
      "type": "Admin/MissingProductModal/submitMissingProductResponse",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`MissingProductModal Sagas workSubmitMissingProductRequest 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "payload": Object {
        "appearanceSecond": 123,
        "brandName": undefined,
        "missingProductId": undefined,
        "productName": undefined,
        "productVariantName": "foo",
      },
      "type": "data/content/addProductMention",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;
